--- a/DA6401__Assignment_1.ipynb
+++ b/DA6401__Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoqGgW0h7BX4aUJC4DuTIN",
+      "authorship_tag": "ABX9TyNxQ0+O/vpOaNorM49Utr7U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "code",
       "source": [
-        "## Question-1\n",
+        "# Question-1\n",
         "\n",
         "!pip install wandb\n",
         "import wandb\n",
@@ -37,7 +37,7 @@
         "\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.metrics import confusion_matrix\n",
-        "import seaborn as sns\n",
+        "#import seaborn as sns\n",
         "from sklearn.model_selection import train_test_split\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
@@ -82,9 +82,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "e97f5cd3-5c8d-40e4-e481-80969bb13dcf"
+        "outputId": "1efc6189-dea7-46da-bbab-fbc84498e2cc"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,40 +116,78 @@
           ]
         },
         {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "Changes to your `wandb` environment variables will be ignored because your `wandb` session has already started. For more information on how to modify your settings with `wandb.init()` arguments, please refer to <a href='https://wandb.me/wandb-init' target=\"_blank\">the W&B docs</a>."
-            ]
-          },
-          "metadata": {}
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n"
+          ]
         },
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<IPython.core.display.HTML object>"
+              "<IPython.core.display.Javascript object>"
             ],
-            "text/html": [
-              "Ignoring project 'DA6401_ASSIGNMENT_1' when running a sweep."
+            "application/javascript": [
+              "\n",
+              "        window._wandbApiKey = new Promise((resolve, reject) => {\n",
+              "            function loadScript(url) {\n",
+              "            return new Promise(function(resolve, reject) {\n",
+              "                let newScript = document.createElement(\"script\");\n",
+              "                newScript.onerror = reject;\n",
+              "                newScript.onload = resolve;\n",
+              "                document.body.appendChild(newScript);\n",
+              "                newScript.src = url;\n",
+              "            });\n",
+              "            }\n",
+              "            loadScript(\"https://cdn.jsdelivr.net/npm/postmate/build/postmate.min.js\").then(() => {\n",
+              "            const iframe = document.createElement('iframe')\n",
+              "            iframe.style.cssText = \"width:0;height:0;border:none\"\n",
+              "            document.body.appendChild(iframe)\n",
+              "            const handshake = new Postmate({\n",
+              "                container: iframe,\n",
+              "                url: 'https://wandb.ai/authorize'\n",
+              "            });\n",
+              "            const timeout = setTimeout(() => reject(\"Couldn't auto authenticate\"), 5000)\n",
+              "            handshake.then(function(child) {\n",
+              "                child.on('authorize', data => {\n",
+              "                    clearTimeout(timeout)\n",
+              "                    resolve(data)\n",
+              "                });\n",
+              "            });\n",
+              "            })\n",
+              "        });\n",
+              "    "
             ]
           },
           "metadata": {}
         },
         {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "Ignoring entity 'devyadav11' when running a sweep."
-            ]
-          },
-          "metadata": {}
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Logging into wandb.ai. (Learn how to deploy a W&B server locally: https://wandb.me/wandb-server)\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: You can find your API key in your browser here: https://wandb.ai/authorize\n",
+            "wandb: Paste an API key from your profile and hit enter:"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " ··········\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: No netrc file found, creating one.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mee23m074\u001b[0m (\u001b[33mdevyadav11\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+          ]
         },
         {
           "output_type": "display_data",
@@ -170,7 +208,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Run data is saved locally in <code>/content/wandb/run-20250317_055051-h85nz4ya</code>"
+              "Run data is saved locally in <code>/content/wandb/run-20250319_125040-gjsgv6j8</code>"
             ]
           },
           "metadata": {}
@@ -182,7 +220,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Syncing run <strong><a href='https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1/runs/h85nz4ya' target=\"_blank\">elated-sweep-1</a></strong> to <a href='https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>Sweep page: <a href='https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1/sweeps/1pksdf1o' target=\"_blank\">https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1/sweeps/1pksdf1o</a>"
+              "Syncing run <strong><a href='https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1/runs/gjsgv6j8' target=\"_blank\">frosty-snowball-1305</a></strong> to <a href='https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
             ]
           },
           "metadata": {}
@@ -206,19 +244,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              " View sweep at <a href='https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1/sweeps/1pksdf1o' target=\"_blank\">https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1/sweeps/1pksdf1o</a>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              " View run at <a href='https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1/runs/h85nz4ya' target=\"_blank\">https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1/runs/h85nz4ya</a>"
+              " View run at <a href='https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1/runs/gjsgv6j8' target=\"_blank\">https://wandb.ai/devyadav11/DA6401_ASSIGNMENT_1/runs/gjsgv6j8</a>"
             ]
           },
           "metadata": {}
@@ -232,7 +258,7 @@
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
             "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-            "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+            "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
             "\u001b[1m4422102/4422102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
           ]
@@ -342,6 +368,22 @@
     {
       "cell_type": "code",
       "source": [
+        "## Question-2:\n",
+        "!pip install wandb\n",
+        "\n",
+        "import wandb\n",
+        "from keras.datasets import fashion_mnist\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "import seaborn as sns\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import math\n",
+        "\n",
+        "np.random.seed(42)\n",
         "\n",
         "\n",
         "#Activation functions\n",
@@ -358,56 +400,38 @@
         "\n",
         "def identity(x):\n",
         "  return x\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "rNjDJQGunmo2"
-      },
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "4j8YektTttbK"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## Question-2:\n",
         "\n",
         "\n",
-        "import wandb\n",
-        "from keras.datasets import fashion_mnist\n",
-        "\n",
-        "import matplotlib.pyplot as plt\n",
-        "from sklearn.metrics import confusion_matrix\n",
-        "import seaborn as sns\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import math\n",
-        "\n",
-        "np.random.seed(42)\n",
-        "\n",
-        "# Load dataset\n",
-        "(X_train, Y_train), (X_test, Y_test) = fashion_mnist.load_data()\n",
-        "X_train, X_val, Y_train, Y_val = train_test_split(X_train, Y_train, test_size=0.1, random_state=42)\n",
-        "\n",
-        "# Normalize and reshape images\n",
-        "X_train = X_train.reshape(-1, 28*28) / 255.0\n",
-        "X_test = X_test.reshape(-1, 28*28) / 255.0\n",
-        "X_val = X_val.reshape(-1, 28*28) / 255.0\n",
         "\n",
         "\n",
         "class neural_network():\n",
-        "  def __init__(self, layers, learning_rate, weightDecay, batch_size, epochs, optimiser,\n",
+        "  def __init__(self, layers, learning_rate, dataset, weightDecay, batch_size, epochs, optimiser,\n",
         "               activationFunc, beta = 0.1, beta_RMS = 0.9, isWandb = True):\n",
+        "\n",
+        "\n",
+        "    if dataset == \"fashion_mnist\":\n",
+        "      (X_train, Y_train), (X_test, Y_test) = fashion_mnist.load_data()\n",
+        "\n",
+        "    elif dataset == \"mnist\":\n",
+        "      (X_train, Y_train), (X_test, Y_test) = mnist.load_data()\n",
+        "\n",
+        "    X_train, X_val, Y_train, Y_val = train_test_split(X_train, Y_train, test_size=0.1, random_state=42)\n",
+        "\n",
+        "\n",
+        "    X_train = X_train.reshape(-1, 28*28) / 255.0\n",
+        "    X_test = X_test.reshape(-1, 28*28) / 255.0\n",
+        "    X_val = X_val.reshape(-1, 28*28) / 255.0\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "    self.x_train = X_train\n",
         "    self.y_train = Y_train\n",
@@ -1033,12 +1057,12 @@
         "\n",
         "\n",
         "  def confusionMatrix(self):\n",
-        "    predictions = self.predict(self.X_test)\n",
+        "    predictions = self.predict(self.x_test)\n",
         "\n",
         "    class_names = [\"T-shirt/Top\", \"Trouser\", \"Pullover\", \"Dress\", \"Coat\", \"Sandal\", \"Shirt\", \"Sneaker\", \"Bag\", \"Ankle Boot\"]\n",
         "\n",
         "    if self.isWandb == True:\n",
-        "      conf_matrix = confusion_matrix(self.Y_test, predictions)\n",
+        "      conf_matrix = confusion_matrix(self.y_test, predictions)\n",
         "      plt.figure(figsize=(10, 7))\n",
         "      sns_heatmap = sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues',\n",
         "                                xticklabels=class_names, yticklabels=class_names)\n",
@@ -1055,7 +1079,7 @@
         "      wandb.log({\"confusion_matrix_custom\": wandb.Image(heatmap_image_filename)})\n",
         "\n",
         "    else:\n",
-        "      conf_matrix = confusion_matrix(self.Y_test, predictions)\n",
+        "      conf_matrix = confusion_matrix(self.y_test, predictions)\n",
         "      plt.figure(figsize=(10, 7))\n",
         "      sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues',\n",
         "                  xticklabels= class_names,\n",
@@ -1104,22 +1128,7 @@
         "\n",
         "\n",
         "\n",
-        "# Define the object of class with number of inputs mlayers and number of inputs (change as needed)\n",
-        "#layer_sizes = [784, 3, 4, 2, 10]\n",
-        "#nn = neural_network( epochs = 5, layers = layer_sizes, learning_rate = 0.01, batch_size = 10 ,  optimiser= 'some', activationFunc= 'sigmoid')\n",
         "\n",
-        "# Test with one sample image\n",
-        "#sample_image = x_test[:10]\n",
-        "#actual_output = y_test[:10]\n",
-        "#output_probs = nn.backword_prop(y = actual_output[i] for i in range(len(sample_image)), x = sample_image[i] for i in range(len(sample_image)) )\n",
-        "\n",
-        "# Display image and predicted class\n",
-        "#plt.imshow(sample_image.reshape(28, 28), cmap='gray')\n",
-        "#plt.title(f\"Predicted output Class: {np.argmax(output_probs)}\")\n",
-        "#plt.axis('off')\n",
-        "#plt.show()\n",
-        "#print(\"Actual output class : \" , actual_output)\n",
-        "#print(\"Output layer : \", output_probs)\n",
         "\n",
         "\n",
         "\n",
@@ -1128,7 +1137,7 @@
       "metadata": {
         "id": "-FlA5nt9HJo4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1152,7 +1161,7 @@
         "\n",
         "\n",
         "def main():\n",
-        "    wandb.init(project = \"DA6401_ASSIGNMENT_1\", entity=\"devyadav11\", mode='online')\n",
+        "    wandb.init(project = \"DA6401_ASSIGNMENT_1_newdata\" , entity=\"devyadav11\")\n",
         "    config = wandb.config\n",
         "    run_name = f\"{config.optimiser}_{config.activationFunc}_{config.layers}_{config.batch_size}_{config.epochs}_{config.learning_rate}\"\n",
         "\n",
@@ -1161,7 +1170,7 @@
         "    wandb.run.save()\n",
         "\n",
         "    # Define and train the model as before\n",
-        "    model = neural_network(layers = config.layers, learning_rate = config.learning_rate, weightDecay = config.weightDecay, batch_size = config.batch_size, epochs = config.epochs, optimiser = config.optimiser,\n",
+        "    model = neural_network(layers = config.layers, dataset = \"fashion_mnist\", learning_rate = config.learning_rate, weightDecay = config.weightDecay, batch_size = config.batch_size, epochs = config.epochs, optimiser = config.optimiser,\n",
         "                           activationFunc = config.activationFunc, beta = 0.1, beta_RMS = 0.9, isWandb = True)\n",
         "    model.optimseWeights()\n",
         "    #wandb.finish()\n",
@@ -1178,7 +1187,8 @@
         "            'values': [5,10]\n",
         "        },\n",
         "        'layers': {\n",
-        "          'values': [[784,32,32,32,10],[784,32,32,32,32,10],[784,32,32,32,32,32,10],[784,64,64,64,10],[784,64,64,64,64,10],[784,64,64,64,64,64,10],[784,128,128,128,10],[784,128,128,128,128,10],[784,128,128,128,128,128,10]]\n",
+        "          'values': [[784,32,32,32,10],[784,32,32,32,32,10],[784,32,32,32,32,32,10],[784,64,64,64,10],[784,64,64,64,64,10],[784,64,64,64,64,64,10],[784,128,128,128,128,10],\n",
+        "          [784,128,128,128,10],[784,128,128,128,128,128,10]]\n",
         "        },\n",
         "        'weightDecay': {\n",
         "            'values':[0, 0.0005, 0.5]\n",
@@ -1200,8 +1210,8 @@
         "}\n",
         "\n",
         "\n",
-        "sweep_id = wandb.sweep(sweep=sweep_config,project='DA6401_ASSIGNMENT_1')\n",
-        "wandb.agent(sweep_id, function = main , count = 10)\n",
+        "sweep_id = wandb.sweep(sweep=sweep_config,project='DA6401_ASSIGNMENT_1_newdata')\n",
+        "wandb.agent(sweep_id, function = main , count = 100)\n",
         "\n",
         "wandb.finish()\n"
       ],
@@ -1260,7 +1270,7 @@
         "id": "tRe2B7fWhfZu",
         "outputId": "ee2c179e-63dc-47f4-ce06-f40ace8bab7e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
